# stm32-gpios

./: Cargo.toml
.cargo/: config.toml
src/: build.rs  main.rs
